--- a/source/sass/blocks/attraction.scss
+++ b/source/sass/blocks/attraction.scss
@@ -11,7 +11,7 @@
   @media (--tablet) {
     font-size: 21px;
     width: 308px;
-    margin: 48px auto 20px;
+    margin: 32px auto 28px;
   }
 
   @media (--desktop) {
@@ -25,12 +25,17 @@
   font-weight: 700;
   font-size: 18px;
   line-height: 26px;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   list-style-type: none;
-  margin-left: 20px;
+
+  @media (--mobile) {
+    margin-left: 20px;
+  }
 
   @media (--tablet) {
+    width: 648px;
+    text-align: center;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
   }
@@ -45,6 +50,10 @@
   font-weight: 700;
   font-size: 18px;
   line-height: 26px;
+
+  @media (--tablet) {
+    margin-bottom: 16px;
+  }
 }
 
 .attraction__text {
