--- a/source/sass/blocks/impression.scss
+++ b/source/sass/blocks/impression.scss
@@ -1,13 +1,3 @@
-.impression::after {
-  @media (--mobile) {
-    content: "";
-    position: absolute;
-    width: 320px;
-    height: 1px;
-    background-color: #e5e5e5;
-  }
-}
-
 .impression__title {
   font-weight: 700;
   font-size: 18px;
@@ -70,6 +60,16 @@
   display: flex;
   align-items: center;
   gap: 16px;
+}
+
+.impression__item {
+  @media (--mobile) {
+    margin-bottom: 16px;
+  }
+
+  @media (--tablet) {
+    margin-bottom: 16px;
+  }
 }
 
 .impression__different {
