--- a/source/sass/blocks/maps.scss
+++ b/source/sass/blocks/maps.scss
@@ -13,3 +13,16 @@
     width: 1200px;
   }
 }
+
+
+.maps-image {
+  @media (--tablet) {
+    width: 768px;
+    height: 350px;
+  }
+
+  @media (--desktop) {
+    width: 1200px;
+    height: 350px;
+  }
+}
