--- a/source/sass/blocks/maps.scss
+++ b/source/sass/blocks/maps.scss
@@ -15,13 +15,14 @@
 }
 
 
-.maps-image {
+.maps__image {
   @media (--tablet) {
     width: 768px;
     height: 350px;
   }
 
   @media (--desktop) {
+    object-fit: cover;
     width: 1200px;
     height: 350px;
   }
