--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -13,6 +13,10 @@
     grid-template-columns: repeat(3, 1fr);
     padding: 45px 0;
   }
+
+  @media (--desktop) {
+    padding: 62px 0;
+  }
 }
 
 .main-footer__contacts-link {
