--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -16,6 +16,8 @@
   }
 
   @media (--desktop) {
+    margin-top: 44px;
+    margin-bottom: 39px;
     margin-left: 216px;
     margin-right: 216px;
   }
