--- a/source/sass/blocks/your.scss
+++ b/source/sass/blocks/your.scss
@@ -8,7 +8,8 @@
 
   @media (--desktop) {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 494px 466px;
+    padding-inline: 120px;
     margin-top: 66px;
     margin-bottom: 56px;
   }
@@ -30,6 +31,6 @@
   }
 
   @media (--desktop) {
-    left: 465px;
+    left: 324px;
   }
 }
